# e-battle

./: .gitignore  EXPERT_REVIEW.md  HN_REDDIT_TEMPLATES.md  LICENSE  MEGA_TEST_REPORT.md  PACKAGE_GUIDE.md  PROMOTION.md  PROMOTION_CONTENT.md  PROMOTION_KIT.md  QUICK_PROMO_GUIDE.md  README.md  README_zh.md  TEST_REPORT_v2.md  VISUAL_GUIDE.md  build_exe.bat  build_exe.sh  deep_test.py  friendbattle.py  mega_test_suite.py  professional_test_suite.py  professional_test_suite_v2.py  pyinstaller.spec  pyproject.toml  quickstart.sh  requirements.txt  simulate_cli_user.py  test_basic.py
.github/workflows/: build_exe.yml  ci.yml
config/: config.yaml  settings.json
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.full  build-cpu.sh  build.sh  docker-compose.yml  run.sh
docs/: WECHAT_EXPORT_GUIDE.md
scripts/: create_release.py  info.sh  wechat_extractor.py
src/: __init__.py  cli.py  launcher.py  wechat_exporter.py
src/cli/: __init__.py  cli.py
src/clone/: __init__.py  cloner.py  manager.py  memory.py  parser.py  storage.py  wechat_parser.py
src/debate/: __init__.py  engine.py  formatters.py  skills.py
src/export/: __init__.py
src/image_decrypt/: __init__.py
src/share/: __init__.py  screenshot.py
src/tui/: __init__.py  tui.py
src/web/: __init__.py  app.py
src/web/templates/: export.html  index.html  wechat_import.html  weflow.html
src/wechat_db/: __init__.py
src/wechat_image/: __init__.py
src/wechat_integration/: __init__.py
src/wechat_scanner/: __init__.py
src/weflow/: __init__.py
