[project]
name = "friend-battle"
version = "1.0.0"
description = "AI Friend Battle - Let your WeChat/Telegram friends' AI clones battle each other!"
authors = [{name = "le700"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "battle", "wechat", "chatbot", "fun", "social", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]

[project.scripts]
friend-battle = "src.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
